[package]
name = "weesvc-rocket"
version = "0.1.0"
authors = ["Jordan Gregory <gregory.jordan.m@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "weesvc"
path = "cmd/src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
rocket = "0.4.5"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
diesel = { version = "1.4.5", features=["sqlite"]}
dotenv = "0.15.0"

[workspace]
members = [
    "api",
    "app",
    "cmd",
    "db",
    "env",
]
